--- a/client/src/ProductPage/ProductPage.css
+++ b/client/src/ProductPage/ProductPage.css
@@ -8,7 +8,7 @@
     border-radius: var(--border-radius);
     box-shadow: 0px 0px 35px var(--shadow);
     background-color: var(--main-color);
-    padding: 50px;
+    padding: var(--container-padding);
     min-height: 610px;
     transition: background-color 0.3s;
 }
