--- a/client/src/VishPage/VishPage.css
+++ b/client/src/VishPage/VishPage.css
@@ -8,14 +8,14 @@
     border-radius: var(--border-radius);
     box-shadow: 0px 0px 35px var(--shadow);
     background-color: var(--main-color);
-    padding: 50px;
+    padding: var(--container-padding);
     min-height: 610px;
     transition: background-color 0.3s;
 }
 
 .vish-cards-container {
     gap: var(--gap);
-    margin-top: 50px;
+    margin-top: var(--gap);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
